# braidpool

./: .gitignore  README.md  selftest.sh
.github/workflows/: jekyll-gh-pages.yml  rust-node-coverage.yml
docs/: .rvmrc  README.md  _config.yml  index.md  specification.md
docs/_layouts/: default.html
docs/_posts/: 2023-03-05-specifications.md  2023-04-02-synchrony-in-bitcoin.md  2023-08-09-block-generation.md  2023-09-13-braidpool-architecture-diagram.md  2023-09-14-providing-rounds-for-dkg-tss-protocols.md  2023-09-14-the-consensus-conundrum.md  2023-09-25-kaspa-ghostdag-partial-synchrony-assumption.md
docs/assets/architecture/: braidpool.puml  braidpool_node.puml
docs/development-updates/_posts/: 2024-01-12-async-rust.md  2024-01-19-rust-fearless-concurrency.md  2024-01-29-talking-to-peers.md  2024-03-01-bitcoin-dsl.md  2024-03-17-bitcoin-dsl-lightning-contracts.md
node/: Cargo.toml  config.toml
node/config/: Cargo.toml
node/config/src/: lib.rs
node/connection/: Cargo.toml
node/connection/src/: connection_manager.rs  lib.rs
node/protocol/: Cargo.toml
node/protocol/src/: handshake.rs  heartbeat.rs  lib.rs  ping.rs
node/run/: Cargo.toml
node/run/src/: cli.rs  main.rs
node/src/: cli.rs  config.rs  connection.rs  connection_manager.rs  main.rs  protocol.rs
node/uhpo/: Cargo.toml  Readme.md
node/uhpo/docs/: spec.md
node/uhpo/src/: error.rs  lib.rs  payout_settlement.rs  payout_update.rs
node/uhpo/src/crypto/: mod.rs  signature.rs
node/uhpo/src/transaction/: builder.rs  mod.rs
node/uhpo/tests/: standard_flow.rs  utils.rs
(+2 files in other folders)
