[package]
name = "uhpo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcoin = {version = "0.32.2" , features = ["rand"] }
rand = "0.8.5"

[dev-dependencies]
mockall = "0.12.1"
secp256k1 = "0.29.0"